Fix broken icon on Safari

--- a/src/frontend/boards/lc/index.scss
+++ b/src/frontend/boards/lc/index.scss
@@ -169,7 +169,7 @@ $gap: 10px;
     }
 
     &::before {
-      content: '️🛠️';
+      content: '️️🔧';
     }
 
     &:hover {
